Make bottom margin relative to screen size.

--- a/tufte.css
+++ b/tufte.css
@@ -16,7 +16,7 @@ body { width: 87.5%;
        margin-right: auto;
        padding-left: 12.5%;
        font-family: ETBembo, Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
-       padding-bottom: 400px;
+       padding-bottom: 20rem;
        background-color: #fffff8;
        color: #111;
        max-width: 1400px; }
