Linkify quote sources. Fix code example.

--- a/tufte.css
+++ b/tufte.css
@@ -31,7 +31,7 @@ article { position: relative;
           padding-top: 5rem; }
 
 p { font-size: 1.4rem;
-    line-height: 1.4;
+    line-height: 2rem;
     margin-top: 1.4rem;
     margin-bottom: 1.4rem;
     width: 55%;
