--- a/tufte.css
+++ b/tufte.css
@@ -20,54 +20,6 @@ body { width: 87.5%;
        color: #111;
        max-width: 1400px; }
 
-.sans { font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif; }
-
-.code { font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
-        color: #222;
-        font-size: 1.2rem;
-        line-height: 1.63333333333; }
-
-article { position: relative;
-          padding-top: 5rem; }
-
-p { font-size: 1.4rem;
-    line-height: 2rem;
-    margin-top: 1.4rem;
-    margin-bottom: 1.4rem;
-    width: 55%;
-    padding-right: 0;
-    vertical-align: baseline; }
-
-@media screen and (max-width: 600px) { p { width: 70%; }}
-@media screen and (max-width: 400px) { p { width: 90%; }}
-
-a { color: #222; }
-
-img { max-width: 100%; }
-
-sup, sub { vertical-align: baseline;
-           position: relative;
-           top: -0.4rem; }
-
-sub { top: 0.4rem; }
-
-.fullwidth { max-width: 95%; } 
-
-.sidenote, .marginnote { float: right;
-                          clear: right;
-                          margin-right: -60%;
-                          width: 50%;
-                          margin-top: 0;
-                          margin-bottom: 0;
-                          font-size: 1.0rem;
-                          line-height: 1.96;
-                          vertical-align: baseline;
-                          position: relative; }
-
-@media screen and (max-width: 600px) { .sidenote, .marginnote { width: 25%;
-                                                                margin-right: -40%; }}
-@media screen and (max-width: 400px) { .sidenote, .marginnote { display:none; }}
-
 h1 { font-style: italic;
       font-weight: 400;
       margin-top: 4rem;
@@ -117,13 +69,63 @@ thead th { border-bottom: 1px solid #333333;
            border-collapse: separate; 
            border-spacing: 5px 5px;}
 
-a.url { text-decoration: none;
-        word-break: break-all;
-        font-family: "Lucida Console", "Lucida Sans Typewriter", Monaco, "Bitstream Vera Sans Mono", monospace; }
+article { position: relative;
+          padding-top: 5rem; }
+
+p { font-size: 1.4rem;
+    line-height: 2rem;
+    margin-top: 1.4rem;
+    margin-bottom: 1.4rem;
+    width: 55%;
+    padding-right: 0;
+    vertical-align: baseline; }
+
+@media screen and (max-width: 600px) { p { width: 70%; }}
+@media screen and (max-width: 400px) { p { width: 90%; }}
+
+a { color: #222; }
+
+img { max-width: 100%; }
+
+sup, sub { vertical-align: baseline;
+           position: relative;
+           top: -0.4rem; }
+
+sub { top: 0.4rem; }
 
 sup.sidenote-number { 
       font-size: 0.9rem;
       color: #f00000; }
+
+.sans { font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif; }
+
+.code { font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
+        color: #222;
+        font-size: 1.2rem;
+        line-height: 1.6; }
+
+pre.code { padding: 0 2em; }
+
+.fullwidth { max-width: 95%; } 
+
+.sidenote, .marginnote { float: right;
+                          clear: right;
+                          margin-right: -60%;
+                          width: 50%;
+                          margin-top: 0;
+                          margin-bottom: 0;
+                          font-size: 1.0rem;
+                          line-height: 1.96;
+                          vertical-align: baseline;
+                          position: relative; }
+
+@media screen and (max-width: 600px) { .sidenote, .marginnote { width: 25%;
+                                                                margin-right: -40%; }}
+@media screen and (max-width: 400px) { .sidenote, .marginnote { display:none; }}
+
+a.url { text-decoration: none;
+        word-break: break-all;
+        font-family: "Lucida Console", "Lucida Sans Typewriter", Monaco, "Bitstream Vera Sans Mono", monospace; }
 
 span.newthought { font-variant: small-caps; }
 
