--- a/tufte.css
+++ b/tufte.css
@@ -20,26 +20,25 @@ body { width: 87.5%;
        color: #111;
        max-width: 1400px; }
 
-h1 { font-style: italic;
-      font-weight: 400;
-      margin-top: 4rem;
-      margin-bottom: 1.5rem;
-      font-size: 2.5rem;
-      line-height: 1; }
+h1 { font-weight: 400;
+     margin-top: 4rem;
+     margin-bottom: 1.5rem;
+     font-size: 2.5rem;
+     line-height: 1; }
 
-h2 {  font-style: italic;
-      font-weight: 400;
-      margin-top: 2.1rem;
-      margin-bottom: 0;
-      font-size: 2rem;
-      line-height: 1; }
+h2 { font-style: italic;
+     font-weight: 400;
+     margin-top: 2.1rem;
+     margin-bottom: 0;
+     font-size: 2rem;
+     line-height: 1; }
 
-h3 {  font-style: italic;
-      font-weight: 400;
-      font-size: 1.7rem;
-      margin-top: 2rem;
-      margin-bottom: 0;
-      line-height: 1; }
+h3 { font-style: italic;
+     font-weight: 400;
+     font-size: 1.7rem;
+     margin-top: 2rem;
+     margin-bottom: 0;
+     line-height: 1; }
 
 subtitle { font-style: italic;
            margin-top: 1rem;
@@ -109,15 +108,15 @@ pre.code { padding: 0 2em; }
 .fullwidth { max-width: 95%; } 
 
 .sidenote, .marginnote { float: right;
-                          clear: right;
-                          margin-right: -60%;
-                          width: 50%;
-                          margin-top: 0;
-                          margin-bottom: 0;
-                          font-size: 1.0rem;
-                          line-height: 1.96;
-                          vertical-align: baseline;
-                          position: relative; }
+                         clear: right;
+                         margin-right: -60%;
+                         width: 50%;
+                         margin-top: 0;
+                         margin-bottom: 0;
+                         font-size: 1.0rem;
+                         line-height: 1.96;
+                         vertical-align: baseline;
+                         position: relative; }
 
 @media screen and (max-width: 600px) { .sidenote, .marginnote { width: 25%;
                                                                 margin-right: -35%; }}
@@ -150,8 +149,7 @@ span.newthought { font-variant: small-caps; }
 
                tr, img { page-break-inside: avoid; }
 
-               img { max-width: 100% !important; }
-               
+               img { max-width: 100% !important; }               
 
                p, h2, h3 { orphans: 3;
                            widows: 3; }
