--- a/tufte.css
+++ b/tufte.css
@@ -23,7 +23,7 @@ body { width: 87.5%;
 h1 { font-weight: 400;
      margin-top: 4rem;
      margin-bottom: 1.5rem;
-     font-size: 3.2rem;           /*2.5*/
+     font-size: 3.2rem;
      line-height: 1; }
 
 h2 { font-style: italic;
