--- a/tufte.css
+++ b/tufte.css
@@ -21,7 +21,8 @@ body { width: 87.5%;
        font-family: ETBembo, Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
        background-color: #fffff8;
        color: #111;
-       max-width: 1400px; }
+       max-width: 1400px; 
+       counter-reset: sidenote-counter; }
 
 h1 { font-weight: 400;
      margin-top: 4rem;
@@ -131,6 +132,19 @@ pre.code { padding: 0 0 0 2em; }
                          line-height: 1.96;
                          vertical-align: baseline;
                          position: relative; }
+
+.sidenote-number { counter-increment: sidenote-counter; }
+
+.sidenote-number:before, .sidenote:before { content: counter(sidenote-counter) " ";
+                   position: relative;
+                   top: -0.4rem;
+                   vertical-align: baseline;
+                   font-size: 0.9rem;
+                   color: #f00000; }
+
+.sidenote-number:before { content: counter(sidenote-counter); }
+
+.sidenote:before { content: counter(sidenote-counter) " "; }
 
 @media screen and (max-width: 600px) { .sidenote, .marginnote { width: 25%;
                                                                 margin-right: -35%; }}
