Change name of sidenotes
Since `.sidenote-number` no longer contains only a number but a fragment
of text, we change the name to `.sidenote` and `.sidenote` to
`.sidenote-content`.

--- a/tufte.css
+++ b/tufte.css
@@ -101,7 +101,7 @@ sup, sub { vertical-align: baseline;
 
 sub { top: 0.4rem; }
 
-sup.sidenote-number { font-size: 0.9rem;
+sup.sidenote { font-size: 0.9rem;
                       color: #f00000; }
 
 p, footer, pre.code { width: 55%; }
@@ -122,7 +122,7 @@ pre.code { padding: 0 0 0 2em; }
 
 .fullwidth { max-width: 95%; }
 
-.sidenote, .marginnote { float: right;
+.sidenote-content, .marginnote { float: right;
                          clear: right;
                          margin-right: -60%;
                          width: 50%;
@@ -133,22 +133,22 @@ pre.code { padding: 0 0 0 2em; }
                          vertical-align: baseline;
                          position: relative; }
 
-.sidenote-number { counter-increment: sidenote-counter; }
+.sidenote { counter-increment: sidenote-counter; }
 
-.sidenote-number:after, .sidenote:before { content: counter(sidenote-counter) " ";
+.sidenote:after, .sidenote-content:before { content: counter(sidenote-counter) " ";
                    position: relative;
                    top: -0.4rem;
                    vertical-align: baseline;
                    font-size: 0.9rem;
                    color: #f00000; }
 
-.sidenote-number:after { content: counter(sidenote-counter); }
+.sidenote:after { content: counter(sidenote-counter); }
 
-.sidenote:before { content: counter(sidenote-counter) " "; }
+.sidenote-content:before { content: counter(sidenote-counter) " "; }
 
-@media screen and (max-width: 600px) { .sidenote, .marginnote { width: 25%;
+@media screen and (max-width: 600px) { .sidenote-content, .marginnote { width: 25%;
                                                                 margin-right: -35%; }}
-@media screen and (max-width: 400px) { .sidenote, .marginnote { display: none; }}
+@media screen and (max-width: 400px) { .sidenote-content, .marginnote { display: none; }}
 
 .url { text-decoration: none;
         word-break: break-all;
