--- a/tufte.css
+++ b/tufte.css
@@ -97,7 +97,10 @@ figcaption { float: right;
              vertical-align: baseline;
              position: relative; }
 
-a { color: #222; }
+a { color: #222;
+    text-decoration: none;
+    border-bottom: 1px solid #777;
+    padding-bottom: 1px; }
 
 img { max-width: 100%; }
 
