Use visibility:hidden for sidenote numbers.

--- a/tufte.css
+++ b/tufte.css
@@ -158,7 +158,7 @@ pre.code { padding: 0 0 0 2em; }
 
 @media screen and (max-width: 600px) { .sidenote, .marginnote { width: 35%;
                                                                 margin-right: -45%; }}
-@media screen and (max-width: 400px) { .sidenote-number { display: none; }
+@media screen and (max-width: 400px) { .sidenote-number { visibility: hidden; }
                                        .sidenote, .marginnote { width: 50%;
                                                                 margin: 0.5em;
                                                                 margin-right: -5%; }}
