--- a/tufte.css
+++ b/tufte.css
@@ -127,16 +127,16 @@ sub { top: 0.4rem; }
 
 .sidenote-number:after, .sidenote:before { content: counter(sidenote-counter) " ";
                                            position: relative;
-                                           top: -0.4rem;
                                            vertical-align: baseline;
-                                           font-size: 0.9rem;
                                            color: #f00000; }
 
-.sidenote-number:after { content: counter(sidenote-counter); }
+.sidenote-number:after { content: counter(sidenote-counter); 
+                         font-size: 0.9rem;
+                         top: -0.4rem; }
 
 .sidenote-number:after { left: 0.1rem; }
 
-.sidenote:before { content: counter(sidenote-counter) " ";
+.sidenote:before { content: counter(sidenote-counter) ". ";
                    position: absolute;
                    /* 100% refers to the computed width of the number, so this transform
                     * shifts the number just outside the left edge of the sidenote box,
