--- a/tufte.css
+++ b/tufte.css
@@ -65,10 +65,7 @@ thead th { border-bottom: 1px solid #AAAAAA;
 
 td.text { text-align: left; }
 
-table.booktabs { width: auto;
-                 max-width: 53%;
-                 margin-left: auto;  /* center the table */
-                 margin-right: auto;
+table.booktabs { width: 53%;
                  border-spacing: 0px;
                  border-top: 2px solid #333333;
                  border-bottom: 2px solid #333333; }
@@ -94,7 +91,7 @@ table.booktabs { width: auto;
                     margin-left: auto;
                     margin-right: auto;
                     margin-top: 1ex;
-                    caption-side: bottom; }
+                    caption-side: top; }
 
 .booktabs tbody tr td.l { text-align: left !important; }
 .booktabs tbody tr td.c { text-align: center !important; }
@@ -141,7 +138,7 @@ a { color: #222;
 
 img { max-width: 100%; }
 
-.sidenote, .marginnote { float: right;
+.sidenote, .marginnote { float:right;
                          clear: right;
                          margin-right: -60%;
                          width: 50%;
@@ -151,6 +148,19 @@ img { max-width: 100%; }
                          line-height: 1.6;
                          vertical-align: baseline;
                          position: relative; }
+
+.table-caption {
+    float:right;
+    clear:right;
+    margin-right: -60%;
+    width: 50%;
+    margin-top: 0;
+    margin-bottom: 0;
+    font-size: 1.0rem;
+    line-height: 1.6;
+    
+    
+}
 
 .sidenote-number { counter-increment: sidenote-counter; }
 
@@ -163,7 +173,7 @@ img { max-width: 100%; }
                          font-size: 0.9rem;
                          top: -0.4rem; }
 
-.sidenote-number:after { left: 0.1rem; }
+.sidenote-number:after { left: -0.1rem; }
 
 .sidenote:before { content: counter(sidenote-counter) ". ";
                    position: absolute;
@@ -228,6 +238,23 @@ label.margin-toggle:not(.sidenote-number) {
                                                                  position: relative; }
                             label { cursor: pointer; }
                             pre.code { padding: 0; }
+                            .table-caption {
+                                display:block;
+                                float:right;
+                                clear:both;
+                                width: 98%;
+                                margin-top: 1rem;
+                                margin-bottom: 0.5rem;
+                                margin-left: 1%;
+                                margin-right: 1%;
+                                vertical-align: baseline;
+                                position: relative;
+                                
+                                
+                            }
+                            table, table.booktabs {
+                                width: 85%;
+                            }
     
 
 }
