--- a/tufte.css
+++ b/tufte.css
@@ -149,18 +149,14 @@ img { width: 100%; }
                          vertical-align: baseline;
                          position: relative; }
 
-.table-caption {
-    float:right;
-    clear:right;
-    margin-right: -60%;
-    width: 50%;
-    margin-top: 0;
-    margin-bottom: 0;
-    font-size: 1.0rem;
-    line-height: 1.6;
-    
-    
-}
+.table-caption { float:right;
+                 clear:right;
+                 margin-right: -60%;
+                 width: 50%;
+                 margin-top: 0;
+                 margin-bottom: 0;
+                 font-size: 1.0rem;
+                 line-height: 1.6; }
 
 .sidenote-number { counter-increment: sidenote-counter; }
 
@@ -209,18 +205,11 @@ pre.code { padding: 0 0 0 2em;
 span.newthought { font-variant: small-caps;
                   font-size: 1.2em; }
 
-input.margin-toggle {
-    display:none;
-}
+input.margin-toggle { display:none; }
 
-label.sidenote-number{
-    display:inline;
-}
+label.sidenote-number{ display:inline; }
 
-label.margin-toggle:not(.sidenote-number) {
-    display: none;
-}
-
+label.margin-toggle:not(.sidenote-number) { display: none; }
 
 @media(max-width: 760px){ label.margin-toggle:not(.sidenote-number) {display: inline;}
                           .sidenote, .marginnote { display: none;}
@@ -238,26 +227,17 @@ label.margin-toggle:not(.sidenote-number) {
                                                                  position: relative; }
                             label { cursor: pointer; }
                             pre.code { padding: 0; }
-                            .table-caption {
-                                display:block;
-                                float:right;
-                                clear:both;
-                                width: 98%;
-                                margin-top: 1rem;
-                                margin-bottom: 0.5rem;
-                                margin-left: 1%;
-                                margin-right: 1%;
-                                vertical-align: baseline;
-                                position: relative;
-                                
-                                
-                            }
-                            table, table.booktabs {
-                                width: 85%;
-                            }
-    
-
-}
+                            .table-caption { display:block;
+                                             float:right;
+                                             clear:both;
+                                             width: 98%;
+                                             margin-top: 1rem;
+                                             margin-bottom: 0.5rem;
+                                             margin-left: 1%;
+                                             margin-right: 1%;
+                                             vertical-align: baseline;
+                                             position: relative; }
+                            table, table.booktabs { width: 85%; }}
 
 
 
