--- a/tufte.css
+++ b/tufte.css
@@ -44,14 +44,11 @@ subtitle { font-style: italic;
            display: block;
            line-height: 1; }
 
-table { width: 53%;
+table { width: 98%;
         text-align: right;
         font-size: 1.2rem;
         line-height: 1.4;
-        margin-top: 1.4rem;
-        margin-bottom: 1.4rem;
-        margin-left: 1%;
-        margin-right: 1%;
+        margin: 1.4rem 1%;
         border-collapse: separate;
         border-spacing: 0 5px;
         -webkit-font-feature-settings: 'tnum'; /* This is technically redundant */
@@ -65,10 +62,10 @@ thead th { border-bottom: 1px solid #AAAAAA;
 
 td.text { text-align: left; }
 
+span.table-label { padding-top: 8px; } /* to maintain height relative to table header row */
+
 table.booktabs { width: auto;
-                 max-width: 53%;
-                 margin-left: auto;  /* center the table */
-                 margin-right: auto;
+                 margin: 0 auto;
                  border-spacing: 0px;
                  border-top: 2px solid #333333;
                  border-bottom: 2px solid #333333; }
@@ -174,7 +171,7 @@ img { max-width: 100%; }
                    -ms-transform: translateX(-100%) translateX(-0.25rem);
                    transform: translateX(-100%) translateX(-0.25rem); }
 
-p, footer, pre.code { width: 55%; }
+p, footer, pre.code, div.table-wrapper { width: 55%; }
 
 @media screen and (max-width: 600px) { p, footer, pre.code { width: 65%; }
                                        blockquote p, blockquote footer { width: 60%; }}
